bugfix/main-base
-lang = en
-variables + $mobile-max, $tablet-max
-Index.html ->Scripts before end body

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -9,7 +9,9 @@ $secondary-title-color: #FFA5BA; // Section labels (100% natural, tradition and 
 
 //Break points
 $mobile: 320px;
+$mobile-max: 767px;
 $tablet: 768px;
+$tablet-max: 1199px;
 $desktop: 1200px;
 
 // Transition
