Почистила код заголовка

--- a/src/sass/reviews/_reviews.scss
+++ b/src/sass/reviews/_reviews.scss
@@ -105,14 +105,8 @@
 
 .swiper-slide__subtitle {
 
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 186%;
-    /* or 26px */
-
+    
+    line-height: 1.86;
     text-align: center;
-
-    color: #000000;
-
     margin-bottom: 28px;
 }
