--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,3 +1,18 @@
 <section class="section about">
-  <div class="container">How it's made - About Us</div>
-</section>
+  <div class="container">
+    <div class="label">
+      <p class="title-label">tradition and love</p>
+      <h2 class="title-about">how it’s made?</h2>
+    </div>
+    <div>
+      <img src="/src/img/home-pic.png" alt="" width="280px" height="280px"> 
+    </div>
+    <div class="description">
+      <p class="description-first">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</p>
+      <p class="description-two">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt. Aliquam erat volutpat. Aenean accumsan.</p>
+    </div>
+  </div>
+    
+      
+  
+    </section>
