bugfix/main-header.html
пофикшен баг не блокирующий билд проекта

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,18 +1,13 @@
 <header class="header">
   <div class="header__container container">
-   
     <a class="header_logo-link">
-      <img 
-        class="header_logo"
-        srcset=""
-        src=""
-        alt="logo"
-      />
+      <!-- <img class="header_logo" srcset="" src="" alt="logo" /> -->
+      <img class="header_logo" alt="logo" />
     </a>
 
     <button class="mob-menu__open-btn" type="button">
       <svg class="mob-menu__btn-icon-open" width="20" height="12">
-        <use href=""></use>
+        <!-- <use href=""></use> -->
       </svg>
     </button>
 
@@ -39,21 +34,19 @@
     <button class="header__buy-btn" type="button">
       <span class="header__buy-text">Buy now</span>
       <svg class="header__buy-icon" width="5" height="8">
-        <use href=""></use>
+        <!-- <use href=""></use> -->
       </svg>
     </button>
-
   </div>
-
 
   <div class="backdrop-mob is-hidden">
     <div class="mob-menu">
       <div class="mob-menu__wrapper">
         <h2 class="visually-hidden">Mobile menu</h2>
-        
+
         <button class="mob-menu__close-btn" type="button">
           <svg class="mob-menu__close-icon" width="40" height="40">
-            <use href=""></use>
+            <!-- <use href=""></use> -->
           </svg>
         </button>
 
@@ -61,7 +54,7 @@
           <span class="mob-menu__buy-text">Buy now</span>
           <span>
             <svg class="mob-menu__buy-icon" width="5" height="8">
-              <use href=""></use>
+              <!-- <use href=""></use> -->
             </svg>
           </span>
         </button>
@@ -83,11 +76,7 @@
             <a class="mob-menu__link" href="">Contacts</a>
           </li>
         </ul>
-
       </div>
     </div>
   </div>
-
-
-
 </header>
