--- a/src/sass/features/_features.scss
+++ b/src/sass/features/_features.scss
@@ -1,3 +1,42 @@
 .features {
-    background-color: teal;
+  background-color: $tetriary-background-color;
+
+  &__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+
+  &__icon {
+    display: block;
+    height: 50px;
+    margin-bottom: 16px;
+    background-color: red;
+    &--first {
+      width: 33px;
+    }
+
+    &--second {
+      width: 50px;
+    }
+
+    &--third {
+      width: 44px;
+    }
+  }
+
+  &__title {
+    margin-bottom: 19px;
+    font-family: 'Titan One', cursive;
+    font-size: 36px;
+    line-height: calc(41 / 36);
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: $accent-color;
+  }
+
+  &__descr {
+    max-width: 230px;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: calc(20 / 12);
+  }
 }
