--- a/src/partials/features.html
+++ b/src/partials/features.html
@@ -1,3 +1,27 @@
 <section class="section features">
-  <div class="container">Features</div>
+  <div class="container">
+    <ul class="features__list">
+      <li class="features__item">
+        <span class="features__icon features__icon--first"></span>
+        <p class="features__title">721</p>
+        <p class="features__descr">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
+      </li>
+      <li class="features__item">
+        <span class="features__icon features__icon--second"></span>
+        <p class="features__title">16kg</p>
+        <p class="features__descr">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
+      </li>
+      <li class="features__item">
+        <span class="features__icon features__icon--third"></span>
+        <p class="features__title">84</p>
+        <p class="features__descr">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
+      </li>
+    </ul>
+  </div>
 </section>
