--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,6 +1,7 @@
 // Colors
 $primary-background-color: #ffffff;
 $secondary-background-color: #FFB8CA; //About , Contacts, Footer sections
+$tetriary-background-color: #FFF5F6;
 $accent-color: #D41443; //nav hover, logo, button text, titles, etc..
 $primary-text-color: #000000;
 $primary-inverse-text-color: #ffffff;
