--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,6 +1,8 @@
-<article class="reviews">
-         <div class="container">
-          <h1 class="visually-hidden">Reviews</h1>
+<section class="section reviews">
+  <div class="container">
+    <article class="article">
+        
+          <h2 hidden>Reviews</h2>
           
   <div class="swiper customerreviews">
       <div class="swiper-wrapper">
@@ -36,7 +38,7 @@
       </div>
       <div class="swiper-pagination"></div>
     </div>
- </div>
+ 
 
    <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
@@ -52,3 +54,5 @@
       });
     </script>
       </article>
+  </div>
+</section>
