--- a/src/sass/reviews/_reviews.scss
+++ b/src/sass/reviews/_reviews.scss
@@ -1,7 +1,7 @@
-.reviews {
-    padding-top: 60px;
-    padding-bottom: 60px;
-}
+// .reviews {
+//     padding-top: 60px;
+//     padding-bottom: 60px;
+// }
 
 .swiper {
     width: 100%;
