add h2 in section

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,8 +1,9 @@
 <section class="section reviews">
   <div class="container">
+    <h2 hidden>Reviews</h2>
     <article class="article">
         
-          <h2 hidden>Reviews</h2>
+          <h1 hidden>Customer Reviews</h1>
           
   <div class="swiper customerreviews">
       <div class="swiper-wrapper">
