--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -20,8 +20,8 @@
             </div>
           </li>
           <li class="card__content">
-            <a class="card__link" href="tel:+610383766284">+61 (0) 383 766 284</a>
-            <a class="card__link" href="mailto:noreply@envato.com">noreply@envato.com</a>
+            <a class="link" href="tel:+610383766284">+61 (0) 383 766 284</a>
+            <a class="link" href="mailto:noreply@envato.com">noreply@envato.com</a>
           </li>
         </ul>
       </li>
@@ -43,8 +43,8 @@
           </div>
         </li>
         <li class="card__content">
-          <a class="card__link" href="tel:+610383766284">+61 (0) 383 766 284</a>
-          <a class="card__link" href="mailto:noreply@envato.com">noreply@envato.com</a>
+          <a class="link" href="tel:+610383766284">+61 (0) 383 766 284</a>
+          <a class="link" href="mailto:noreply@envato.com">noreply@envato.com</a>
         </li>
       </ul>
       </li>
@@ -66,18 +66,18 @@
             </div>
           </li>
           <li class="card__content">
-            <a class="card__link" href="tel:+610383766284">+61 (0) 383 766 284</a>
-            <a class="card__link" href="mailto:noreply@envato.com">noreply@envato.com</a>
+            <a class="link" href="tel:+610383766284">+61 (0) 383 766 284</a>
+            <a class="link" href="mailto:noreply@envato.com">noreply@envato.com</a>
           </li>
         </ul>
       </li>
     </ul>
-    <ul class="contacts__modal_btn">
+    <ul class="contacts__modal-btn">
       <li>
-        <button class="contacts__button contacts__button--color">Our Locations</button>
+        <button class="button button--with-hover">Our Locations</button>
       </li>
       <li>
-        <button class="contacts__button">Franchise</button>
+        <button class="button button--with-hover">Franchise</button>
       </li>
     </ul>
   </div>
