--- a/src/sass/contacts/_contacts.scss
+++ b/src/sass/contacts/_contacts.scss
@@ -2,8 +2,8 @@
   padding-bottom: 40px;
   background-image: linear-gradient(
     to top,
-    #FFF5F6 77%,
-    #fff 23%
+    $secondary-background-color 77%,
+    $primary-background-color 23%
   );
   &__title {
     display: none;
@@ -18,39 +18,31 @@
       margin-bottom: 20px;
     }
   }
-  &__modal_btn {
+  &__modal-btn {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 32px;
   }
-  &__modal_btn>li:not(:last-child) {
+  &__modal-btn>li:not(:last-child) {
     margin-bottom: 10px;
   }
-  &__button {
+  &__modal-btn .button {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 160px;
     height: 44px;
-    color: $accent-color;
-    background-color: $primary-inverse-text-color;
-    border: 0;
-    border-radius: 22px;
-    &:hover,
-    &:focus {
-      color: $primary-inverse-text-color;
-      background-color: $accent-color;
-    }
-  }
-  &__button--color {
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.3;
     color: $primary-inverse-text-color;
     background-color: $accent-color;
-    &:hover,
-    &:focus {
-      color: $accent-color;
-      background-color: $primary-inverse-text-color;
-    }
+    
+  }
+  &__modal-btn>li:nth-child(2) .button {
+    color: $accent-color;
+    background-color: $primary-inverse-text-color;
   }
 }
 .card {
@@ -85,6 +77,12 @@
       background-color: #E1E1E1;
     }
   }
+  &__content .link {
+    display: block;
+    font-size: 12px;
+    line-height: 1.5;
+    color: $secondary-text-color;
+  }
   &__text {
     font-size: 12px;
     margin-bottom: 24px;
@@ -106,12 +104,4 @@
   &__weekends {
     margin-bottom: 24px;
   }
-  &__link {
-    display: block;
-    font-size: 12px;
-    line-height: 1.5;
-    text-decoration: none;
-    color: $secondary-text-color;
-  }
-
 }
