--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -35,7 +35,22 @@
              <p>Emily, Los Angeles</p>
           </div>
         </div>
-        <div class="swiper-slide">Slide 3</div>
+        <div class="swiper-slide">
+
+          <span class="swiper-slide__avatar"></span>
+          <div class="swiper-slide__content">
+            <div class="swiper-slide__thumb">
+               <p class="swiper-slide__text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</p>
+            </div>
+           
+          </div>
+
+          <div class="swiper-slide__subtitle">
+             <p>Emily, Los Angeles</p>
+          </div>
+          
+        
+        </div>
       </div>
       <div class="swiper-pagination"></div>
     </div>
