--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,26 @@
 <footer class="page-footer">
   <div class="container">
-    Footer
+    <p class="page-footer__label">
+      <span class="page-footer__title-begin">homemade ice cream made</span>
+      <span class="page-footer__title-end">with passion</span>
+    </p>
+    <ul class="socials">
+      <li class="socials__item">
+        <a class="socials__link link" href="" aria-label="github"></a>
+      </li>
 
-    <!-- <button class="button page-footer__button">sdfgsdfgkjdfgk</button> -->
-  </div>
+      <li class="socials__item">
+        <a class="socials__link link" href="" aria-label="telegram"></a>
+      </li>
+
+      <li class="socials__item">
+        <a class="socials__link link" href="" aria-label="facebook"></a>
+      </li>
+    </ul>
+
+    <address class="address">
+      <p class="address__appeal">Feel free to contact </p>
+      <a class="address__tel link" href="" ></a>
+    </address>
+  <div class="container"></div>
 </footer>
