--- a/src/sass/footer/_page-footer.scss
+++ b/src/sass/footer/_page-footer.scss
@@ -1,9 +1,1 @@
-.page-footer {
-    background-color: chocolate;
-}
-
-.page-footer__button {
-    width: 100px;
-    height: 40px;
-    background-color: wheat;
-}
+.page-footer {}
