--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -5,7 +5,8 @@
       <h2 class="about__subtitle">how it’s made?</h2>
     </div>
     <div>
-      <!-- <img src="/src/img/home-pic.png" alt="" width="280px" height="280px">  -->
+      <img 
+      src="/src/images/About/Mobile/about-cow-mob-x1.png" alt="" width="280px" height="280px"> 
     </div>
     <div class="about__description">
       <p class="description__text">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</p>
