--- a/src/partials/features.html
+++ b/src/partials/features.html
@@ -1,22 +1,20 @@
 <section class="section features">
+  <h2 class="visually-hidden">Наши преимущества</h2>
   <div class="container">
     <ul class="features__list">
-      <li class="features__item">
-        <span class="features__icon features__icon--first"></span>
+      <li class="features__item features__item--cup">
         <p class="features__title">721</p>
         <p class="features__descr">
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
       </li>
-      <li class="features__item">
-        <span class="features__icon features__icon--second"></span>
+      <li class="features__item features__item--apple">
         <p class="features__title">16kg</p>
         <p class="features__descr">
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
       </li>
-      <li class="features__item">
-        <span class="features__icon features__icon--third"></span>
+      <li class="features__item features__item--heart">
         <p class="features__title">84</p>
         <p class="features__descr">
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
