--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,14 @@
 <header class="header">
   <div class="header__container container">
     <a class="header_logo-link">
-      <!-- <img class="header_logo" srcset="" src="" alt="logo" /> -->
-      <img class="header_logo" alt="logo" />
+      <svg class="header_logo" width="199" height="50">
+        <use href="./images/hero-header/logo.svg"></use>
+      </svg>
     </a>
 
     <button class="mob-menu__open-btn" type="button">
       <svg class="mob-menu__btn-icon-open" width="20" height="12">
-        <!-- <use href=""></use> -->
+        <use href="./images/icons.svg#icon-header-menu"></use>
       </svg>
     </button>
 
