--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -74,10 +74,20 @@
     </ul>
     <ul class="contacts__modal-btn">
       <li>
-        <button class="button button--with-hover">Our Locations</button>
+        <button class="button button--with-hover">
+          Our Locations
+          <svg class="contacts__icon" width="8" height="10">
+            <use href="./images/icons.svg#icon-header-arrow-btn"></use>
+          </svg>
+        </button>
       </li>
       <li>
-        <button class="button button--with-hover">Franchise</button>
+        <button class="button button--with-hover">
+          Franchise
+          <svg class="contacts__icon" width="8" height="10">
+            <use href="./images/icons.svg#icon-header-arrow-btn"></use>
+          </svg>
+        </button>
       </li>
     </ul>
   </div>
