--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -6,7 +6,7 @@
     </div>
     <div>
       <img 
-      src="/src/images/About/Mobile/about-cow-mob-x1.png" alt="" width="280px" height="280px"> 
+      src="./src/images/About/Mobile/about-cow-mob-x1.png" alt="" width="280px" height="280px"> 
     </div>
     <div class="about__description">
       <p class="about__text">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</p>
