--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -15,19 +15,19 @@
     <nav class="header__nav">
       <ul>
         <li class="header__nav-item">
-          <a class="header__nav-link" href="">Home</a>
+          <a class="header__nav-link" href="./hero.html">Home</a>
         </li>
         <li class="header__nav-item">
-          <a class="header__nav-link" href="">About us</a>
+          <a class="header__nav-link" href="./about.html">About us</a>
         </li>
         <li class="header__nav-item">
-          <a class="header__nav-link" href="">How it's made?</a>
+          <a class="header__nav-link" href="./features.html">How it's made?</a>
         </li>
         <li class="header__nav-item">
-          <a class="header__nav-link" href="">Our products</a>
+          <a class="header__nav-link" href="./products.html">Our products</a>
         </li>
         <li class="header__nav-item">
-          <a class="header__nav-link" href="">Contacts</a>
+          <a class="header__nav-link" href="./contacts.html">Contacts</a>
         </li>
       </ul>
     </nav>
@@ -35,7 +35,7 @@
     <button class="header__buy-btn" type="button">
       <span class="header__buy-text">Buy now</span>
       <svg class="header__buy-icon" width="5" height="8">
-        <!-- <use href=""></use> -->
+        <use href="./images/icons.svg#icon-header-arrow-btn"></use>
       </svg>
     </button>
   </div>
@@ -47,15 +47,15 @@
 
         <button class="mob-menu__close-btn" type="button">
           <svg class="mob-menu__close-icon" width="40" height="40">
-            <!-- <use href=""></use> -->
+            <use href="./images/icons.svg#icon-menu-close"></use>
           </svg>
         </button>
 
         <button class="mob-menu__buy-btn">
           <span class="mob-menu__buy-text">Buy now</span>
           <span>
-            <svg class="mob-menu__buy-icon" width="5" height="8">
-              <!-- <use href=""></use> -->
+            <svg class="mob-menu__buy-icon" width="7" height="10">
+              <use href="./images/icons.svg#icon-header-arrow-btn"></use>
             </svg>
           </span>
         </button>
