--- a/src/sass/header/_page-header.scss
+++ b/src/sass/header/_page-header.scss
@@ -1,5 +1,5 @@
 .header {
-    background-color: $secondary-background-color;
+    background-color: rgba(255,184,202,.8);
 
     box-sizing: border-box;
     position: absolute;
@@ -8,6 +8,7 @@
 
     padding-top: 8px;
     
+    position: fixed;
     z-index: 10;
 }
 
@@ -46,6 +47,17 @@
    }
 }
 
+.header__buy-text {
+    font-size: 16px;
+    font-weight: 700;
+    color: $accent-color;
+}
+
+.header__buy-icon {
+    fill: $accent-color;
+    margin-left: 16px;
+}
+
 
 
 
@@ -61,7 +73,7 @@
     border: 0;
     cursor: pointer;
 
-    background-color: $secondary-background-color;
+    background-color: transparent;
 }
 
 .mob-menu__btn-icon-open {
@@ -166,10 +178,13 @@
 }
 
 .mob-menu__buy-text {
-    color: #D41443;
+    font-size: 16px;
+    font-weight: 700;
+    color: $accent-color;
 }
 
 .mob-menu__buy-icon {
+    fill: $accent-color;
     margin-left: 16px;
 }
 
