--- a/src/sass/about/_about.scss
+++ b/src/sass/about/_about.scss
@@ -24,7 +24,7 @@
     color: $accent-color;
 }
 .about__description {
-    background-image: url(/src/images/About/Mobile/about-bgmilk-mob-x1.png);
+    background-image: url(./images/about/mobile/about-bgmilk-mob-x1.png);
     background-repeat: no-repeat;
     background-position: center;
     font-weight: 500;
