--- a/src/sass/features/_features.scss
+++ b/src/sass/features/_features.scss
@@ -18,28 +18,34 @@
 
     &--cup::before {
       width: 33px;
-      background-image: url('../images/Advantages/Mobile/advan-cup-mob-x1.png');
+      // background-image: url('../images/Advantages/Mobile/advan-cup-mob-x1.png');
+      background-image: url('../images/advantages/mobile/advan-cup-mob-x1.png');
 
       @media screen and (min-resolution: 2dppx) {
-        background-image: url('../images/Advantages/Mobile/advan-cup-mob-x2.png');
+        // background-image: url('../images/Advantages/Mobile/advan-cup-mob-x2.png');
+        background-image: url('../images/advantages/mobile/advan-cup-mob-x2.png');
       }
     }
 
     &--apple::before {
       width: 50px;
-      background-image: url('../images/Advantages/Mobile/advan-apples-mob-x1.png');
+      // background-image: url('../images/Advantages/Mobile/advan-apples-mob-x1.png');
+      background-image: url('../images/advantages/mobile/advan-apples-mob-x1.png');
 
       @media screen and (min-resolution: 2dppx) {
-        background-image: url('../images/Advantages/Mobile/advan-apples-mob-x2.png');
+        // background-image: url('../images/Advantages/Mobile/advan-apples-mob-x2.png');
+        background-image: url('../images/advantages/mobile/advan-apples-mob-x2.png');
       }
     }
 
     &--heart::before {
       width: 44px;
-      background-image: url('../images/Advantages/Mobile/advan-heart-mob-x1.png');
+      // background-image: url('../images/Advantages/Mobile/advan-heart-mob-x1.png');
+      background-image: url('../images/advantages/mobile/advan-heart-mob-x1.png');
 
       @media screen and (min-resolution: 2dppx) {
-        background-image: url('../images/Advantages/Mobile/advan-heart-mob-x2.png');
+        // background-image: url('../images/Advantages/Mobile/advan-heart-mob-x2.png');
+        background-image: url('../images/advantages/mobile/advan-heart-mob-x2.png');
       }
     }
   }
