--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -15,19 +15,19 @@
     <nav class="header__nav">
       <ul>
         <li class="header__nav-item">
-          <a class="header__nav-link" href="./hero.html">Home</a>
+          <a class="header__nav-link" href="">Home</a>
         </li>
         <li class="header__nav-item">
-          <a class="header__nav-link" href="./about.html">About us</a>
+          <a class="header__nav-link" href="">About us</a>
         </li>
         <li class="header__nav-item">
-          <a class="header__nav-link" href="./features.html">How it's made?</a>
+          <a class="header__nav-link" href="">How it's made?</a>
         </li>
         <li class="header__nav-item">
-          <a class="header__nav-link" href="./products.html">Our products</a>
+          <a class="header__nav-link" href="">Our products</a>
         </li>
         <li class="header__nav-item">
-          <a class="header__nav-link" href="./contacts.html">Contacts</a>
+          <a class="header__nav-link" href="">Contacts</a>
         </li>
       </ul>
     </nav>
