--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,12 +1,14 @@
 <header class="header">
   <div class="header__container container">
-    <a class="header_logo-link">
-      <svg class="header_logo" width="199" height="50">
-        <use href="./images/hero-header/logo.svg"></use>
-      </svg>
+    <a class="header__logo-link">
+      <img 
+      src="./images/hero-header/logo.svg" 
+      alt="logo" 
+      class="header_logo"
+      width="199" height="50"/>
     </a>
 
-    <button class="mob-menu__open-btn" type="button">
+    <button type="button" class="mob-menu__open-btn button">
       <svg class="mob-menu__btn-icon-open" width="20" height="12">
         <use href="./images/icons.svg#icon-header-menu"></use>
       </svg>
@@ -15,19 +17,19 @@
     <nav class="header__nav">
       <ul>
         <li class="header__nav-item">
-          <a class="header__nav-link" href="./hero.html">Home</a>
+          <a class="header__nav-link" href="">Home</a>
         </li>
         <li class="header__nav-item">
-          <a class="header__nav-link" href="./about.html">About us</a>
+          <a class="header__nav-link" href="">About us</a>
         </li>
         <li class="header__nav-item">
-          <a class="header__nav-link" href="./features.html">How it's made?</a>
+          <a class="header__nav-link" href="">How it's made?</a>
         </li>
         <li class="header__nav-item">
-          <a class="header__nav-link" href="./products.html">Our products</a>
+          <a class="header__nav-link" href="">Our products</a>
         </li>
         <li class="header__nav-item">
-          <a class="header__nav-link" href="./contacts.html">Contacts</a>
+          <a class="header__nav-link" href="">Contacts</a>
         </li>
       </ul>
     </nav>
