--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,9 +8,9 @@
       width="199" height="50"/>
     </a>
 
-    <button type="button" class="mob-menu__open-btn button">
+    <button class="mob-menu__open-btn button" type="button">
       <svg class="mob-menu__btn-icon-open" width="20" height="12">
-        <use href="./images/icons.svg#icon-header-menu"></use>
+        <use href="./images/hero-header/symbol-defs.svg#icon-menu"></use>
       </svg>
     </button>
 
@@ -49,7 +49,7 @@
 
         <button class="mob-menu__close-btn" type="button">
           <svg class="mob-menu__close-icon" width="40" height="40">
-            <use href="./images/icons.svg#icon-menu-close"></use>
+            <use href="./images/hero-header/symbol-defs.svg#icon-close"></use>
           </svg>
         </button>
 
