Added section hero

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,3 +1,20 @@
 <section class="section hero">
-  <div class="container">Hero</div>
+  <div class="container hero__container">
+    <h1 class="hero__title">
+      ice cream made with
+      <span class="hero__subtitle">passion</span>
+    </h1>
+    <ul class="hero__ul">
+      <li class="hero__list">
+        <button type="button" class="button hero__button button--color__cherry">
+          Products
+        </button>
+      </li>
+      <li class="hero__list">
+        <button type="button" class="button hero__button button--color__white">
+          How it’s made?
+        </button>
+      </li>
+    </ul>
+  </div>
 </section>
