--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,3 +1,3 @@
 <section class="section gallery">
-  <div class="container">Gallery</div>
+  <div class="container">ТУТ МОЖЕ БУТИ ВАШ КОД ГАЛЕРЕЇ</div>
 </section>
